...
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kOa-Mq-idZ" userLabel="Input View - password" customClass="AMInputView" customModule="HMU" customModuleProvider="target">
                                                        <rect key="frame" x="40" y="84" width="244.5" height="52"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="PassINPUT">
                                                            <bool key="isElement" value="NO"/>
                                                        </accessibility>
...
                                                        </constraints>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="Title" value="Password"/>
                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSecureTextEntry" value="YES"/>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Password"/>
...
                                                        </state>
                                                    </button>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="36R-Qf-Bc4" userLabel="InputView" customClass="AMInputView" customModule="HMU" customModuleProvider="target">
                                                        <rect key="frame" x="40" y="8" width="244.5" height="52"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="37"/>
                                                <state key="normal" title="LOG IN">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                                                        <rect key="frame" x="40" y="8" width="244.5" height="52"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="SignInputView"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="52" id="JFe-X1-OXD"/>
...
                                                        <rect key="frame" x="40" y="84" width="244.5" height="52"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="SignPassINPUT"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="52" id="fkt-1J-C1e"/>
...
                                                        <rect key="frame" x="40" y="160" width="244.5" height="52"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ConfirmPassINPUT"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="52" id="fLw-rR-nz1"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="37"/>
                                                <state key="normal" title="SIGN UP">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
